--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ body.inicio {
 }
 
 .inicio-descripcion {
-  font-size: 1.5rem;
+  font-size: 1.0rem;
   line-height: 2;
   letter-spacing: 0.2em;
   color: rgba(255,255,255,0.9);
@@ -228,7 +228,7 @@ body.inicio {
 }
 
 /* =============================
-   BOTÓN ENTRAR (CORREGIDO)
+   BOTÓN ENTRAR 
 ============================= */
 
 .inicio-entrar {
@@ -237,7 +237,7 @@ body.inicio {
   left: 50%;
   transform: translateX(-50%);
 
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: bold;
   letter-spacing: 12px;
   color: rgb(4, 7, 1);
@@ -255,12 +255,12 @@ body.inicio {
   z-index: 20;
 }
 
-/* ✅ Hover sin corrimiento */
+/*  Hover */
 .inicio-entrar:hover {
   transform: translateX(-50%) scale(1.1);
 }
 
-/* ✅ MOBILE FIX */
+/*  MOBILE */
 .inicio-contenido {
   width: 100%;
   height: 100vh;
@@ -280,7 +280,7 @@ body.inicio {
   .inicio-entrar {
     position: static !important;
     transform: none !important;
-    font-size: 3rem;
+    font-size: 2em;
     margin-bottom: 8vh;
     text-align: center;
   }
@@ -329,4 +329,12 @@ body.inicio {
 @keyframes neonPulse {
   from { box-shadow: 0 0 15px #ff00ff; }
   to { box-shadow: 0 0 30px #ff00ff, 0 0 50px #8800ff; }
+}
+
+/* FIX DUPLICADO GLITCH EN MOBILE */
+@media (max-width: 768px) {
+  .glitch::before,
+  .glitch::after {
+    display: none;
+  }
 }
